<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <EditText
        android:id="@+id/email"
        android:layout_width="331dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="59dp"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/password"
        android:layout_width="331dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/Login"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <Button
        android:id="@+id/login"
        android:layout_width="300dp"
        android:layout_height="63dp"
        android:layout_gravity="start"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/roundedbutton"
        android:enabled="true"
        android:text="@string/Login"
        android:textColor="#fff"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="198dp"
        android:layout_height="165dp"
        android:layout_marginStart="107dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="106dp"
        app:layout_constraintEnd_toEndOf="@+id/app_bar"
        app:layout_constraintStart_toStartOf="@+id/app_bar"
        app:layout_constraintTop_toBottomOf="@+id/app_bar"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/Forgotten"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="87dp"
        android:layout_marginEnd="86dp"
        android:text="@string/Forgotten"
        android:textColor="#0000EE"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/login"
        app:layout_constraintStart_toStartOf="@+id/login"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <Button
        android:id="@+id/register"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="9dp"
        android:text="@string/Register"
        android:textColor="#0000EE"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/Forgotten"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/Forgotten"
        app:layout_constraintTop_toBottomOf="@+id/Forgotten" />

</androidx.constraintlayout.widget.ConstraintLayout>