<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgottenActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <include
        android:id="@+id/navbar"
        layout="@layout/activity_navbar" />

    <Button
        android:id="@+id/Generate"
        android:layout_width="300dp"
        android:layout_height="63dp"
        android:layout_gravity="start"
        android:layout_marginStart="30dp"
        android:layout_marginTop="424dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="220dp"
        android:background="@drawable/roundedbutton"
        android:enabled="true"
        android:text="@string/Generate"
        android:textColor="#fff"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.076" />

    <Button
        android:id="@+id/Copy"
        android:layout_width="300dp"
        android:layout_height="63dp"
        android:layout_gravity="start"
        android:layout_marginStart="30dp"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="150dp"
        android:background="@drawable/roundedbutton"
        android:enabled="true"
        android:text="@string/Copy"
        android:textColor="#fff"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.833" />

    <TextView
        android:id="@+id/length"
        android:layout_width="224dp"
        android:layout_height="32dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="207dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="492dp"
        android:text="@string/PWordLength"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/c"
        android:layout_width="301dp"
        android:layout_height="43dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="164dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="524dp"
        android:clickable="false"
        android:editable="false"
        android:ems="10"
        android:enabled="false"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="242dp"
        android:layout_height="17dp"
        android:layout_marginStart="74dp"
        android:layout_marginTop="239dp"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="475dp"
        android:max="32"
        android:progress="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/generatedPassword"
        android:layout_width="293dp"
        android:layout_height="26dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="166dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="539dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="249dp"
        android:layout_height="154dp"
        android:layout_marginStart="74dp"
        android:layout_marginTop="267dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="250dp"
        android:paddingStart="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/radioSCharacters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SCharacters"
            android:textColor="@color/NavBar"
            android:textSize="18sp"
            android:onClick="checkButton"/>

        <RadioButton
            android:id="@+id/radioNumbers"
            android:layout_width="148dp"
            android:layout_height="wrap_content"
            android:text="@string/Numbers"
            android:textColor="@color/NavBar"
            android:textSize="18sp"
            android:onClick="checkButton"/>

        <RadioButton
            android:id="@+id/radioLetters"
            android:layout_width="162dp"
            android:layout_height="wrap_content"
            android:text="@string/Letters"
            android:textColor="@color/NavBar"
            android:textSize="18sp"
            android:onClick="checkButton"/>

        <RadioButton
            android:id="@+id/radioAll"
            android:layout_width="148dp"
            android:layout_height="wrap_content"
            android:text="@string/All"
            android:textColor="@color/NavBar"
            android:textSize="18sp"
            android:onClick="checkButton"
            android:checked="true"/>

    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>