<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgottenActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <EditText
        android:id="@+id/email"
        android:layout_width="313dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="36dp"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="219dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="112dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/back"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="123dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="78dp"
        android:text="@string/Home"
        android:textColor="#0000EE"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/reset"
        app:layout_constraintStart_toStartOf="@+id/reset"
        app:layout_constraintTop_toBottomOf="@+id/reset" />

    <Button
        android:id="@+id/reset"
        android:layout_width="281dp"
        android:layout_height="63dp"
        android:layout_gravity="start"
        android:layout_marginStart="15dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="17dp"
        android:background="@drawable/roundedbutton"
        android:enabled="true"
        android:text="@string/Reset"
        android:textColor="#fff"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email" />

</androidx.constraintlayout.widget.ConstraintLayout>