<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Navbar.GenerateFragment">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="206dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="4dp"
        android:text="@string/AboutDesc"
        app:layout_constraintEnd_toEndOf="@+id/editText"
        app:layout_constraintStart_toStartOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:clickable="false"
        android:editable="false"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/About"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:clickable="false"
        android:editable="false"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/About"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clickable="false"
        android:editable="false"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Signout"
        app:layout_constraintEnd_toEndOf="@+id/editText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="36dp"
        android:clickable="false"
        android:editable="false"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Close"
        app:layout_constraintEnd_toEndOf="@+id/app_bar"
        app:layout_constraintStart_toStartOf="@+id/app_bar"
        app:layout_constraintTop_toBottomOf="@+id/app_bar" />

    <Button
        android:id="@+id/signout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="319dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="10dp"
        android:text="@string/Signout"
        app:layout_constraintEnd_toEndOf="@+id/closeapp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/closeapp"
        app:layout_constraintTop_toBottomOf="@+id/closeapp"
        tools:text="@string/Signout" />

    <Button
        android:id="@+id/closeapp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="301dp"
        android:layout_marginTop="23dp"
        android:text="@string/Close"
        app:layout_constraintEnd_toEndOf="@+id/app_bar"
        app:layout_constraintStart_toStartOf="@+id/app_bar"
        app:layout_constraintTop_toBottomOf="@+id/app_bar"
        tools:text="@string/Close" />

    <TextView
        android:id="@+id/userid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="174dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="178dp"
        android:text="User ID:"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

</androidx.constraintlayout.widget.ConstraintLayout>